--- a/Pokedex3/Base.lproj/Main.storyboard
+++ b/Pokedex3/Base.lproj/Main.storyboard
@@ -347,6 +347,9 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mjZ-SA-3DD">
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wcN-DO-Eqk">
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="eOt-6E-AC6"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
@@ -354,10 +357,10 @@
                                 </subviews>
                                 <color key="backgroundColor" red="1" green="0.34509803919999998" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstItem="wcN-DO-Eqk" firstAttribute="leading" secondItem="mjZ-SA-3DD" secondAttribute="leading" id="5nS-ky-JFU"/>
-                                    <constraint firstAttribute="trailing" secondItem="wcN-DO-Eqk" secondAttribute="trailing" id="BOO-JG-swO"/>
                                     <constraint firstItem="wcN-DO-Eqk" firstAttribute="centerY" secondItem="mjZ-SA-3DD" secondAttribute="centerY" id="MpY-wU-LuW"/>
                                     <constraint firstItem="wcN-DO-Eqk" firstAttribute="centerX" secondItem="mjZ-SA-3DD" secondAttribute="centerX" id="aFN-Zs-TLk"/>
+                                    <constraint firstAttribute="trailing" secondItem="wcN-DO-Eqk" secondAttribute="trailing" id="hwJ-h8-qba"/>
+                                    <constraint firstItem="wcN-DO-Eqk" firstAttribute="leading" secondItem="mjZ-SA-3DD" secondAttribute="leading" id="j2M-R2-QZq"/>
                                     <constraint firstAttribute="height" constant="40" id="rlq-9p-Luy"/>
                                 </constraints>
                             </view>
